@@ -2,17 +2,21 @@ package com.ecommerce.service;
 
 import com.ecommerce.dto.EnderecoClienteRequestDTO;
 import com.ecommerce.dto.EnderecoClienteResponseDTO;
+import com.ecommerce.model.Cliente;
 import com.ecommerce.model.EnderecoCliente;
+import com.ecommerce.repository.ClienteRepository;
 import com.ecommerce.repository.EnderecoClienteRepository;
 import com.ecommerce.repository.EstadoRepository;
 import com.ecommerce.repository.MunicipioRepository;
+
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 import jakarta.ws.rs.core.Response;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.eclipse.microprofile.jwt.JsonWebToken;
 
 @ApplicationScoped
 public class EnderecoClienteServiceImpl implements EnderecoClienteService {
@@ -20,12 +24,15 @@ public class EnderecoClienteServiceImpl implements EnderecoClienteService {
     @Inject EnderecoClienteRepository repository;
     @Inject EstadoRepository estadoRepository;
     @Inject MunicipioRepository municipioRepository;
+    @Inject ClienteRepository clienteRepository;
+    @Inject JsonWebToken jwt;
 
     @Override
-    public Response listarTodos() {
-        List<EnderecoClienteResponseDTO> list = repository.listAll()
-            .stream().map(EnderecoClienteResponseDTO::fromEntity).collect(Collectors.toList());
-        return Response.ok(list).build();
+    public List<EnderecoClienteResponseDTO> buscarPorNome(String nome) {
+        List<EnderecoCliente> endereco = repository.buscarPorNome(nome);
+        return endereco.stream()
+            .map(EnderecoClienteResponseDTO::fromEntity)
+            .toList();
     }
 
     @Override
@@ -36,7 +43,14 @@ public class EnderecoClienteServiceImpl implements EnderecoClienteService {
 
     @Override
     @Transactional
-    public void salvar(EnderecoClienteRequestDTO dto) {
+    public EnderecoClienteResponseDTO salvar(EnderecoClienteRequestDTO dto) {
+        
+        String email = jwt.getName();
+        Cliente cliente = clienteRepository.findByEmail(email);
+        if (cliente == null) {
+            throw new RuntimeException("Cliente não encontrado com e-mail: " + email);
+        }
+        
         EnderecoCliente endereco = new EnderecoCliente();
         endereco.setRua(dto.rua());
         endereco.setNumero(dto.numero());
@@ -46,7 +60,11 @@ public class EnderecoClienteServiceImpl implements EnderecoClienteService {
         endereco.setTipoEndereco(dto.tipoEndereco());
         endereco.setEstado(estadoRepository.findById(dto.estadoId()));
         endereco.setMunicipio(municipioRepository.findById(dto.municipioId()));
+        endereco.setCliente(cliente);
         repository.persist(endereco);
+
+        return EnderecoClienteResponseDTO.fromEntity(endereco);
+
     }
 
     @Override
